1.3.1: Fixes, expand base logic